--- a/mobile_demo_test.html
+++ b/mobile_demo_test.html
@@ -144,12 +144,13 @@ BOTTOM BAR NAVIGATION
 	position: relative;
 }
 
+/* click zones */
 #nav_timeline .big_timeline_circle:after{
 	content: '';
 	position: absolute;
 	left: calc(50% - 20px);
-	top: calc(50% - 15px);
-	height: 30px;
+	top: calc(50% - 20px);
+	height: 35px;
 	width: 40px;
 	background: transparent;
 }
@@ -157,7 +158,7 @@ BOTTOM BAR NAVIGATION
 #nav_timeline > span{
 	border: 1px solid #fff;
 	height: 0px;
-	width: 30px;
+	width: 20px;
 	border-bottom:0.2px solid #fff;
 	vertical-align: middle;
 	display: inline-block;
@@ -660,6 +661,9 @@ SVG DEFINITIONS
 		</g>
 	</symbol>
 
+	
+
+	<!-- gold arc -->
 	<symbol id="gold_arc_svg" viewBox="0 0 274 35" xmlns="http://www.w3.org/2000/svg">
 		<path d="M 0.5 34.5 q 136.5 -65 273 0" stroke-width="1" stroke="#FFB938" fill="none"></path>
 	</symbol>
@@ -756,6 +760,17 @@ SVG DEFINITIONS
 		<line x1="3.3" y1="3.3" x2="6.7" y2="6.7"></line>
 		<line x1="3.3" y1="6.7" x2="6.7" y2="3.3"></line>
 	</symbol>
+
+
+	<!-- speech balloons -->
+	<svg id="speech_balloons_svg" viewBox="0 0 51 40" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+		<!-- Generator: Sketch 3.3.2 (12043) - http://www.bohemiancoding.com/sketch -->
+		<title>Speech balloons</title>
+		<g fill="#FFB938">
+			<path d="M19.059,2.014 C28.653,2.014 36.46,8.026 36.46,15.415 C36.46,22.803 28.653,28.815 19.059,28.815 C16.399,28.815 13.817,28.344 11.383,27.419 L10.612,27.124 L9.926,27.583 L6.387,29.942 L7.122,26.272 L7.311,25.317 L6.549,24.708 C3.395,22.188 1.659,18.887 1.659,15.415 C1.659,8.026 9.465,2.014 19.059,2.014 M19.059,0.415 C8.567,0.415 0.059,7.129 0.059,15.415 C0.059,19.526 2.157,23.247 5.551,25.958 L4.059,33.415 L10.813,28.913 C13.309,29.864 16.1,30.415 19.059,30.415 C29.551,30.415 38.059,23.7 38.059,15.415 C38.059,7.129 29.551,0.415 19.059,0.415"></path>
+			<path d="M50.059,21.415 C50.059,14.928 44.835,9.419 37.534,7.329 C37.971,7.981 38.333,8.671 38.657,9.374 C44.454,11.547 48.46,16.116 48.46,21.415 C48.46,25.46 46.409,28.881 42.731,31.339 L43.934,36.29 L39.555,33.094 C36.954,34.286 34.305,34.815 31.059,34.815 C27.286,34.815 23.801,33.88 20.95,32.307 C20.325,32.358 19.702,32.415 19.059,32.415 C18.743,32.415 18.434,32.387 18.118,32.376 C21.512,34.876 26.053,36.415 31.059,36.415 C34.018,36.415 36.809,35.864 39.305,34.913 L46.059,39.415 L44.567,31.958 C47.962,29.247 50.059,25.526 50.059,21.415"></path>
+		</g>
+	</svg>
 
 </svg>
 
@@ -1679,6 +1694,182 @@ MAIN DEMO CONTAINER
 
 
 
+
+
+
+
+
+
+
+
+
+	<style>
+	#tutors_slide_text_container{
+		width: 100%;
+		height: calc(100% - 46px - 42px - 38px);
+		position: fixed;
+		top: 46px;
+		font-size: 29px;
+		font-family: gothamlight;
+		line-height: 1.1;
+	}
+
+	#tutors_slide .bold{
+		font-family: gothambook;
+		font-weight: bold;
+	}
+
+	#tutors_slide .gold{
+		color: #fdba3d;
+	}
+
+	#tutors_slide .smaller{
+		font-size: 21px;
+	}
+
+	#tutors_slide .larger{
+		font-size: 32px;
+	}
+
+	#download_or_tutors{
+		position: fixed;
+		bottom: 42px;
+		width: 100%;
+		font-size: 12px;
+		text-transform: uppercase;
+	}
+
+	#download_or_tutors > div{
+		display: inline-block;
+		width: 50%;
+		box-sizing: border-box;
+		padding: 15px 0px;
+	}
+
+	#download_app_from_tutors_slide{
+		background: #333;
+		color: #fdba3d;
+	}
+
+	#continue_to_tutors{
+		background: #fdba3d;
+		color: #333;
+	}
+
+	#tutors_phone{
+		width:220px; max-width:85%; padding-top:15px;
+	}
+
+
+	#get_confident{
+		position: fixed;
+		left: 0px;
+		top: 0px;
+		width: 100%;
+		height: calc(100% - 42px);
+		font-size: 29px;
+		font-family: gothamlight;
+		line-height: 1.3;
+	}
+
+	#schedule_sessions_container{
+		position: fixed;
+		left: 0px;
+		top: 0px;
+		width: 100%;
+		height: 100%;
+		font-size: 28px;
+		font-family: gothamlight;
+		z-index: 20005;
+	}
+
+	#tutor_photo{
+		width: 160px;
+		margin-top: 10px;
+	}
+
+	#tutor_bg_round{
+		position: absolute;
+		left: 0px;
+		bottom: 0px;
+		width: 100%;
+		height: 43%;
+		background: #fdba3d;
+
+		border-radius: 50%;
+
+		left: -15%;
+		width: 130%;
+	}
+
+	</style>
+
+
+	<!--********************************************************************************
+	TUTORS SLIDE
+	*********************************************************************************-->
+	<div id="tutors_slide" class="slides">
+		<div id="tutors_slide_content" class="demo_general_slide block">
+			
+			<!-- perfect your accent -->
+			<div id="tutors_slide_text_container" class="table">
+				<div id="tutors_slide_text" class="table_cell">
+					<div>To <span class="bold">perfect</span><br>your <span class="bold gold">accent</span>,</div>
+					<div id="tutors_try_it_yourself"><span class="smaller">you really have to</span><br><span class="bold gold">try</span> it yourself.</div>
+					<img id="tutors_phone" src="./demo_images/phone_withproduct.png">
+				</div>
+			</div>
+
+			<!-- continue buttons -->
+			<div id="download_or_tutors">
+				<div id="download_app_from_tutors_slide">Download the app</div><!--
+				--><div id="continue_to_tutors">Continue to tutors</div>
+			</div>
+			
+
+			<!-- get confident through conversations -->
+			<div id="get_confident" class="table">
+				<div id="get_confident_text" class="table_cell">
+					<div>Get truly<br><span class="bold">confident</span> through<br>real <span class="bold gold">conversations</span>.</div>
+					<!-- balloons svg -->
+					<svg id="tutors_speech_balloons" style="width:51px; height:40px; margin-top:15px;"><use xlink:href="#speech_balloons_svg"></use></svg>
+				</div>
+			</div>
+
+			
+			<!-- schedule sessions -->
+			<div id="schedule_sessions_container" class="table">
+				<div id="schedule_sessions_content" class="table_cell">
+					<div>
+						Schedule sessions
+						<div class="smaller">with our</div>
+						<div class="bold gold larger">native-speaking</div>
+						<div>tutors.</div>
+					</div>
+					<img id="tutor_photo" src="./demo_images/live_tutors.png">
+				</div>
+			</div>
+
+			<!-- yellow round bg thingy -->
+			<div id="tutor_bg_round"></div>
+
+
+		</div>
+	</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 	<style>
 	#final_slide_text_container{
 		position: absolute;
@@ -2304,6 +2495,7 @@ var slide_functions = [
 	start_demo,
 	run_patterns_slide,
 	run_speech_recognition_slide,
+	run_tutors_slide,
 	run_final_slide
 ];
 
@@ -2335,7 +2527,7 @@ START THE DEMO
 
 
 // start in the middle if desired
-go_to_slide[4]();
+go_to_slide[5]();
 
 
 
@@ -2959,12 +3151,16 @@ function run_patterns_slide(){
 	function explode(element_array, delay){
 
 		for(var i=0; i<element_array.length; i++){
+			// since the left and top properties are set to the boxes' ending positions,
+			// starting at -left and -top means they'll start in the center
 			var xStart = -parseInt(element_array[i].style.left);
 			var yStart = -parseInt(element_array[i].style.top);
 
+			// set the start point and the overshoot point (for the bounce)
 			var start_point = xStart+'px,'+yStart+'px';
 			var bounce_point = (-xStart/10)+'px,'+(-yStart/10)+'px';
 
+			// move the elements to their original positions (thus making them explode out from the center)
 			bounce(element_array[i], delay, default_bounce_time, start_point, bounce_point,'0px,0px', default_fade_time);
 		}
 	}
@@ -3482,6 +3678,113 @@ function start_speech_samples(){
 
 function stop_speech_samples(){
 	clearInterval(speech_samples_interval);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/**************************************************************
+TUTORS SLIDE
+***************************************************************/
+
+function run_tutors_slide(){
+	
+	// hide elements but maintain their visual space
+	var visibility_hidden = ['tutors_try_it_yourself','tutors_phone','tutors_speech_balloons'];
+	for(var i=0; i<visibility_hidden.length; i++){
+		yb.id(visibility_hidden[i]).style.visibility = 'hidden';
+	}
+
+	// hide certain elements entirely
+	var display_none = ['download_or_tutors','get_confident','schedule_sessions_container','tutor_bg_round'];
+	for(var i=0; i<display_none.length; i++){
+		yb.id(display_none[i]).style.display = 'none';
+	}
+
+
+	// show the actual slide
+	smoothFadeIn('tutors_slide');
+
+
+	// handle the timing
+	var delays = [200];
+	delays[1] = delays[0] + 2000;
+	delays[2] = delays[1] + 500;
+	delays[3] = delays[2] + 500;
+
+
+	bounce('tutors_slide_text',delays[0],default_bounce_time,'0px,70px','0px,95px','0px,90px', default_fade_time,'table-cell');
+	
+	bounce('tutors_slide_text',delays[1],default_bounce_time,'0px,20px','0px,-5px','0px,0px', false);
+	setTimeout(function(){
+		smoothFadeIn('tutors_try_it_yourself');
+	},delays[1]);
+
+	bounce('tutors_phone',delays[2],default_bounce_time,'0px,-20px','0px,5px','0px,0px', default_fade_time,'inline-block');
+
+	bounce('download_or_tutors',delays[3],default_bounce_time,'0px,42px','0px,0px','0px,0px', default_fade_time);
+}
+
+
+// make download button go to app store from tutors slide
+$('#download_app_from_tutors_slide').on(touchstart, function(ev){
+	ev.preventDefault();
+	window.location.href = 'https://itunes.apple.com/us/app/learn-languages-rosetta-stone/id435588892?mt=8';
+});
+
+
+// handle "continue to tutors" button
+$('#continue_to_tutors').on(touchstart, function(ev){
+	ev.preventDefault();
+	continue_to_tutors();
+});
+
+
+function continue_to_tutors(){
+
+	// fade out first parts of slide
+	smoothFadeOut('tutors_slide_text');
+	smoothFadeOut('download_or_tutors');
+
+	// handle the timing
+	var delays = [400];
+	delays[1] = delays[0] + 700;
+	delays[2] = delays[1] + 3000;
+	// delays[3] = delays[2] + 500;
+
+	// bring in "get confident" text and speech balloons icon
+	bounce('get_confident',delays[0],default_bounce_time,'0px,-20px','0px,5px','0px,0px', default_fade_time,'table');
+	bounce('tutors_speech_balloons',delays[1],default_bounce_time,'0px,20px','0px,-5px','0px,0px', default_fade_time,'inline-block');
+
+	// transition to next part of this slide
+	setTimeout(function(){
+		smoothFadeOut('get_confident');
+		schedule_sessions();
+	},delays[2]);
+}
+
+
+function schedule_sessions(){
+	smoothFadeIn('schedule_sessions_container',0.5,'table');
+	smoothFadeIn('tutor_bg_round');
 }
 
 
